--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 Login here 
             </button>
         </div>
+        <div>
+            <input type="color"> 
+        </div>
          
     </form>
 </body>
