add color message

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </button>
         </div>
         <div>
+            <p> select color please </p>
             <input type="color"> 
         </div>
          
